# snake-showdown-live

./: .dockerignore  .gitignore  Agents.md  CI_CD_SETUP.md  CLOUD_DEPLOYMENT.md  COMBAT_LOGIC_FIX.md  COMPLETE_TEST_REPORT.md  CRITICAL_FIXES.md  DEPLOYMENT_SINGLE.md  DEPLOY_RENDER.md  DOCKER.md  DOCKER_COMPLETE.md  DOCKER_SETUP.md  Dockerfile  FINAL_SUCCESS_REPORT.md  GAMEPLAY_TEST_REPORT.md  LEVEL_1_WALKTHROUGH.md  LEVEL_FIXES_PROGRESS.md  README.md  RENDER_QUICKSTART.md  RPG_ROADMAP.md  SINGLE_CONTAINER_COMPLETE.md  SNAKE_QUEST_GUIDE_RU.md  TESTING_FRONTEND.md  TEST_RESULTS.md  UX_IMPROVEMENTS.md  deploy.sh  docker-compose.single.yml  docker-compose.yml  docker.sh  generate-secret.sh  openapi.yaml  package-lock.json  package.json  render.yaml
.github/workflows/: ci-cd.yml
backend/backend/: .env.example  .gitignore  DATABASE.md  Dockerfile  Makefile  README.md  crud.py  database.py  db.py  db_models.py  main.py  models.py  pyproject.toml  seed.py  view_db.sh
backend/backend/tests/: test_api.py
backend/backend/tests_integration/: README.md  __init__.py  conftest.py  test_auth.py  test_e2e.py  test_leaderboard.py  test_live_players.py
deployment/: entrypoint.sh  nginx-combined.conf  supervisord.conf
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/public/: manifest.json
frontend/scripts/: validate-levels.mjs
frontend/src/: App.tsx  index.css
plans/: DOCUMENTATION_STATUS.md
plans/decisions/: final-report.md  functionality-report.md  future-features.md
src/lib/: gameLogic.ts  (+1 more)
(+72 files in other folders)
